projects/compiler/test/typechecker/typedecl/error_field_initializer_type_mismatch.out
Error at %FILE_NAME%:3:13
Type mismatch
  |    b: Bool = 123
                 ^
Expected: Bool
but instead found: Int
